--- a/OndergrondTV/Base.lproj/Main.storyboard
+++ b/OndergrondTV/Base.lproj/Main.storyboard
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,14 +22,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28s-PU-eJU">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28s-PU-eJU" customClass="YTPlayerView">
+                                <rect key="frame" x="0.0" y="20" width="375" height="199"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="199" id="7Hf-r4-Uzg"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0lP-8h-uUy">
-                                <frame key="frameInset" minY="239" width="375" height="428"/>
+                                <rect key="frame" x="0.0" y="239" width="375" height="428"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -34,10 +38,11 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bRQ-nF-g98" id="zMf-YX-3Jx">
-                                            <frame key="frameInset" width="375" height="87"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="c1c-yv-LoI">
+                                                    <rect key="frame" x="0.0" y="-10" width="375" height="97.5"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="scX-lq-O87">
                                                         <size key="itemSize" width="138" height="92"/>
@@ -46,13 +51,27 @@
                                                         <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoCell" id="o99-M0-BFu">
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoCell" id="o99-M0-BFu" customClass="VideoCell" customModule="OndergrondTV" customModuleProvider="target">
                                                             <rect key="frame" x="10" y="3" width="138" height="92"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                                 <rect key="frame" x="0.0" y="0.0" width="138" height="92"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hMP-04-CZP">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="138" height="92"/>
+                                                                    </imageView>
+                                                                </subviews>
                                                             </view>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="hMP-04-CZP" secondAttribute="trailing" id="Aoo-oV-9G9"/>
+                                                                <constraint firstItem="hMP-04-CZP" firstAttribute="top" secondItem="o99-M0-BFu" secondAttribute="top" id="RA5-zz-ekv"/>
+                                                                <constraint firstItem="hMP-04-CZP" firstAttribute="leading" secondItem="o99-M0-BFu" secondAttribute="leading" id="tTC-A0-SvG"/>
+                                                                <constraint firstAttribute="bottom" secondItem="hMP-04-CZP" secondAttribute="bottom" id="u00-1V-U57"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="thumbnailImageView" destination="hMP-04-CZP" id="AQn-ZW-o8w"/>
+                                                            </connections>
                                                         </collectionViewCell>
                                                     </cells>
                                                 </collectionView>
@@ -86,12 +105,45 @@
                     </view>
                     <connections>
                         <outlet property="videoTableView" destination="0lP-8h-uUy" id="tUi-6u-feK"/>
-                        <outlet property="videoView" destination="28s-PU-eJU" id="z7q-Ai-gva"/>
+                        <outlet property="videoView" destination="28s-PU-eJU" id="nwm-AK-njb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+        </scene>
+        <!--Player View Controller-->
+        <scene sceneID="upZ-Pr-sM4">
+            <objects>
+                <viewController id="rpc-ez-aQG" customClass="PlayerViewController" customModule="OndergrondTV" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fbV-1t-edj"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gd5-5L-8Ti"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Du9-c0-agG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hjp-Jx-hOP" customClass="YTPlayerView">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="239"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Gd5-5L-8Ti" firstAttribute="top" secondItem="hjp-Jx-hOP" secondAttribute="bottom" constant="428" id="5Dh-G9-8EM"/>
+                            <constraint firstItem="hjp-Jx-hOP" firstAttribute="top" secondItem="Du9-c0-agG" secondAttribute="top" id="ES9-GU-PMT"/>
+                            <constraint firstItem="hjp-Jx-hOP" firstAttribute="leading" secondItem="Du9-c0-agG" secondAttribute="leading" id="OTP-KQ-KiS"/>
+                            <constraint firstAttribute="trailing" secondItem="hjp-Jx-hOP" secondAttribute="trailing" id="kg4-gh-4zj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="playerView" destination="hjp-Jx-hOP" id="eAq-0F-ppb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uXl-ad-g0m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="840.79999999999995" y="225.33733133433284"/>
         </scene>
     </scenes>
 </document>
