--- a/OndergrondTV/Base.lproj/Main.storyboard
+++ b/OndergrondTV/Base.lproj/Main.storyboard
@@ -24,6 +24,13 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28s-PU-eJU" customClass="YTPlayerView">
                                 <rect key="frame" x="0.0" y="20" width="375" height="199"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y8x-Go-51l">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="650"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="199" id="7Hf-r4-Uzg"/>
